merge from user-service-redis-cache