@@ -10,9 +10,12 @@ import com.vicky.user_service.Repository.AddressRepository;
 import com.vicky.user_service.Repository.UserRepository;
 import com.vicky.user_service.Service.AddressService;
 import com.vicky.user_service.Utility.GetAuthenticatedUser;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class AddressServiceImpl implements AddressService {
@@ -27,6 +30,7 @@ public class AddressServiceImpl implements AddressService {
     }
 
     @Override
+    @CacheEvict(value = "addresses", key = "T(com.vicky.user_service.Utility.GetAuthenticatedUser).getAuthUsername()")
     public List<AddressResponseDto> addAddress(AddressRequestDto addressRequestDto) {
         AddressEntity addressEntity = AddressMapper.toEntity(addressRequestDto);
         UserEntity userEntity = userRepository.findByUsername(GetAuthenticatedUser.getAuthUsername())
@@ -36,10 +40,11 @@ public class AddressServiceImpl implements AddressService {
         addressRepository.save(addressEntity);
         return userEntity.getAddressEntityList().stream()
                 .map(address -> AddressMapper.toDto(address))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
+    @CacheEvict(value = "addresses", key = "T(com.vicky.user_service.Utility.GetAuthenticatedUser).getAuthUsername()")
     public List<AddressResponseDto> deleteAddress(long addressId) {
         AddressEntity addressEntity = addressRepository.findById(addressId)
                 .orElseThrow(() -> new RuntimeException("Address not found"));
@@ -50,31 +55,24 @@ public class AddressServiceImpl implements AddressService {
             addressRepository.delete(addressEntity);
             return userEntity.getAddressEntityList().stream()
                     .map(address -> AddressMapper.toDto(address))
-                    .toList();
+                    .collect(Collectors.toList());
         } else {
             throw new RuntimeException("Access denied");
         }
     }
 
     @Override
+    @Cacheable(value = "addresses", key = "T(com.vicky.user_service.Utility.GetAuthenticatedUser).getAuthUsername()")
     public List<AddressResponseDto> getAddress() {
         UserEntity userEntity = userRepository.findByUsername(GetAuthenticatedUser.getAuthUsername())
                 .orElseThrow(() ->  new RuntimeException("User not found"));
         return userEntity.getAddressEntityList().stream()
                 .map(address -> AddressMapper.toDto(address))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public boolean getAddressByIdValid(long addressId) {
-        UserEntity userEntity = userRepository.findByUsername(GetAuthenticatedUser.getAuthUsername())
-                .orElseThrow(() -> new RuntimeException("User not found"));
-        AddressEntity addressEntity = addressRepository.findById(addressId)
-                .orElseThrow(() -> new RuntimeException("Address not found"));
-        return userEntity.getAddressEntityList().contains(addressEntity);
-    }
-
-    @Override
+    @Cacheable(value = "addresses", key = "T(com.vicky.user_service.Utility.GetAuthenticatedUser).getAuthUsername() + ':' + #addressId")
     public AddressResponseDto getAddressById(long addressId) {
         UserEntity userEntity = userRepository.findByUsername(GetAuthenticatedUser.getAuthUsername())
                 .orElseThrow(() -> new RuntimeException("User not found"));
@@ -85,5 +83,14 @@ public class AddressServiceImpl implements AddressService {
         } else {
             throw new RuntimeException("access denied");
         }
+    }
+
+    @Override
+    public boolean getAddressByIdValid(long addressId) {
+        UserEntity userEntity = userRepository.findByUsername(GetAuthenticatedUser.getAuthUsername())
+                .orElseThrow(() -> new RuntimeException("User not found"));
+        AddressEntity addressEntity = addressRepository.findById(addressId)
+                .orElseThrow(() -> new RuntimeException("Address not found"));
+        return userEntity.getAddressEntityList().contains(addressEntity);
     }
 }
